# supervised-soup-project

./: .env.example  .gitignore  ColabTest.ipynb  README.md  SupervisedSoupGroupInfo.md  colab_requirements_2025_11.txt  environment.yml  pyproject.toml  requirements.txt
docs/: Jira-Github Integration Guide.md  Local Environment Setup Guide.md  SupervisedSoupGroupInfo.md
notebooks/: ColabTest.ipynb  colab_setup.ipynb  colab_test.ipynb
scripts/: local_setup.sh
supervised_soup/: config.py  dataloader.py
supervised_soup/models/: __init__.py  resnet18_baseline.py
tests/: setup_test.py
